<resources>
    <string name="app_name">Prac2</string>
    <string name="register_button">Зарегистрироваться!</string>
    <string name="register">Регистрируйся сейчас!</string>
    <string name="register_info">Придумай свой уникальный ник уже сейчас!</string>
    <string name="gtk_text">Узнавай больше о хакатонах!</string>
    <string name="gtk_btn">Перейти к ленте хакатонов</string>
    <string name="gtk_et">Есть ли у вас опыт участия в хакатонах?</string>
    <string name="part_text">Участвуй в хакатонах!</string>
    <string name="part_btn">Принять вызов</string>
    <string name="part_et">Готовился к соревнованиям?</string>
    <string name="alldone_text">Это ваш никнейм, верно?</string>
    <string name="nickname_s">Ваш никнейм</string>
    <string name="gtk_change">Ха-ха текст изменился</string>
    <string name="yes">Да!</string>
    <string name="helloapp">Привет!</string>
    <string name="pleaseregister">Самое время зарегистрироваться,</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_emailinput">Ваш email</string>
    <string name="et_passinput">Придумайте пароль</string>
    <string name="accept">Подтвердить</string>
    <string name="username">Пользователь</string>
    <string name="goback">Вернуться</string>
    <string name="go_back">Вернуться</string>
    <string name="news">Новости</string>
    <string name="hacks">Хакатоны</string>
</resources>