<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp1"
    android:gravity="center"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:backgroundTintMode="@color/black"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="36dp"
        android:background="#a8000000"></TextView>

    <ImageView
        android:id="@+id/pic"
        android:layout_width="326dp"
        android:layout_height="210dp"
        android:layout_marginBottom="30dp"
        android:scaleType="centerCrop"
        android:src="@drawable/meme1"></ImageView>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/register_button"></Button>

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="289dp"
        android:layout_height="105dp"
        android:background="@color/cardview_light_background"
        android:hint="@string/register_info"
        android:textAlignment="center"></EditText>


</LinearLayout>