<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/wp2"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="46dp"
        android:layout_marginBottom="30dp"
        android:text="@string/gtk_text"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="36dp"
        android:background="#a8000000"
        ></TextView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3"
        android:id="@+id/buttonChange"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="Изменить текст и изображение"></Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonChange"
        android:id="@+id/buttonPanel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/gtk_btn"></Button>

    <EditText
        android:layout_width="289dp"
        android:layout_height="100dp"
        android:background="#ffeaea"
        android:layout_below="@id/buttonPanel"
        android:id="@+id/et_exp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:hint="@string/gtk_et"
        android:layout_marginBottom="30dp"></EditText>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_exp"
        android:id="@+id/pic"
        android:src="@drawable/ic2"></ImageView>

</RelativeLayout>