<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp3">

    <TextView
        android:id="@+id/text"
        android:layout_width="349dp"
        android:layout_height="95dp"
        android:layout_marginTop="180dp"
        android:background="#a8000000"
        android:text="@string/part_text"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <EditText
        android:id="@+id/et_ready"
        android:layout_width="289dp"
        android:layout_height="100dp"
        android:layout_below="@id/buttonPanel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:background="#ffeaea"
        android:hint="@string/part_et"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"></EditText>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:src="@drawable/ic1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ready"
        app:layout_constraintVertical_bias="0.09"></ImageView>

    <Button
        android:id="@+id/buttonPanel"
        android:layout_width="151dp"
        android:layout_height="137dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/part_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_ready"
        app:layout_constraintVertical_bias="0.207"></Button>

</androidx.constraintlayout.widget.ConstraintLayout>